fix(onboarding): increase spacing between steps

--- a/src/pages/Onboarding/styles.css
+++ b/src/pages/Onboarding/styles.css
@@ -14,6 +14,6 @@
 }
 
 .onboarding-page .paragraph {
-  margin-block-end: 20px;
-  margin-block-start: 20px;
+  margin-block-end: 25px;
+  margin-block-start: 25px;
 }
